# polly-kpf

./: .gitignore  .pre-commit-config.yaml  README.md  Spectrum-Order-Peak-diagram.drawio  driftmeasurement.py  etalonanalysis.py  example.cfg  example_notebook.ipynb  fileselection.py  fit_erf_to_ccf_simplified.py  kpf.py  log.py  mask_deltas.py  misc.py  parsing.py  peaks_in_pixel_space_single.py  plotStyle.py  plotting.py  polly_logging.py  pyproject.toml  requirements.txt  run_analysis.py  run_analysis_batch.py  run_analysis_overnight.py  run_analysis_single.py  scratch.py  test_data2D.py  test_peak_plots.py  test_run_analysis_single.py
.github/workflows/: publish.yml
etalon_analysis/: etalon_analysis.py
src/polly/: driftmeasurement.py  etalonanalysis.py  fileselection.py  kpf.py  misc.py  parsing.py  plotting.py
tools/: 2d_drift_dataframe.py  average_RV_drift.py  chromatic_drift.py  peaks_in_pixel_space_single.py  run_analysis_batch.py  run_analysis_single.py  single_RV.py  test_run_analysis_single.py
