[project]
name = "polly"
version = "0.1.0"
description = "Analysis code for KPF etalon data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "astropy>=6.1.7",
    "scipy>=1.14.1",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
    "ipython>=8.30.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.3",
]


[tool.ruff]
line-length = 88


[tool.ruff.lint]
select = [
    "E", # pycodestyle
    # "W", # pycodestyle warnings
    "F", # Pyflakes
    # "D", # pydocstyle
    # "UP", # pyupgrade
    # "B", # flake8-bugbear
    # "SIM", # flake8-simplify
    # "I", # isort
    # "N", # pep8-naming
]
ignore = [
    # "W605", # invalid escape sequence
    # "E251", # unexpected spaces around keyword / parameter equals
    "E722", # do not use bare 'except'
    # "F401", # module imported but unused
    ]


[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E501", # line too long
    ]


[tool.ruff.format]
exclude = ["*.ipynb"]